--- a/HRAttendance/HRAttendance/Views/Home/Index.cshtml
+++ b/HRAttendance/HRAttendance/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
-            <a href="@Url.Action("Index","Leave")">
+            <a href="@Url.Action("Index","Leaves")">
                 <figure>
                     <img alt="Leave" src="~/Content/Images/leave.png" class="home-icon" />
                     <figcaption>Leave</figcaption>
