--- a/HRAttendance/HRAttendance/Views/Attendance/Index.cshtml
+++ b/HRAttendance/HRAttendance/Views/Attendance/Index.cshtml
@@ -7,12 +7,12 @@
 <!-- Tab Navigation -->
 <ul class="nav nav-tabs" id="AttendanceTab" role="tablist">
     <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="attendance-tab" data-bs-toggle="tab" data-bs-target="#attendance" type="button" role="tab" aria-controls="account" aria-selected="false">Attendance</button>
+        <button class="nav-link active" id="attendance-tab" data-bs-toggle="tab" data-bs-target="#attendance" type="button" role="tab" aria-controls="account" aria-selected="false">@HRAttendance.Resources.Attendance.AttendanceRex.LB_Attendance</button>
     </li>
     @if (User.IsInRole(HRAttendance.Utils.Constants.ManagementPermissionName)) 
     {
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="management-tab" data-bs-toggle="tab" data-bs-target="#management" type="button" role="tab" aria-controls="account" aria-selected="false">Management View</button>
+            <button class="nav-link" id="management-tab" data-bs-toggle="tab" data-bs-target="#management" type="button" role="tab" aria-controls="account" aria-selected="false">@HRAttendance.Resources.Attendance.AttendanceRex.LB_Management</button>
         </li>
     }
 </ul>
@@ -20,34 +20,7 @@
 <!-- Tab Content -->
 <div class="tab-content" id="attendanceTabContent">
     <div class="tab-pane fade show active" id="attendance" role="tabpanel" aria-labelledby="attendance-tab">
-        
-        <div class="row">
-            <div class="col-lg-4 col-md-4">
-                <div class="form-group required">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <div class="form-check form-switch form-switch-lg">
-                                <input class="form-check-input" type="checkbox" id="checkIn"> &nbsp;
-                                <label class="form-check-label" for="checkIn">Check In</label>
-
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <div class="form-check form-switch form-switch-lg">
-                                <input class="form-check-input" type="checkbox" id="checkOut"> &nbsp;
-                                <label class="form-check-label" for="checkOut">Check Out</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8 col-md-8">
-                <div id="employee-attendance">
-
-                </div>
-            </div>
-        </div>
-        
+        @Html.Partial("~/Views/Attendance/_EmpAttendanceView.cshtml")
     </div>
     @if (User.IsInRole(HRAttendance.Utils.Constants.ManagementPermissionName)) 
     {
